# SFMLCMAKE

GraphicTesting/: ReadMe.txt  buildGCC.bat  buildVS2013_64.bat  debugGCC.bat
GraphicTesting/ADDNEWFOLDER/: CMakeLists.txt
GraphicTesting/ExternalDependencies/lib/De/86/: glew32sd.lib
GraphicTesting/ExternalDependencies/lib/GCC/De/64/: glew32sd.lib
GraphicTesting/ExternalDependencies/lib/Re/x64/: glew32s.lib
GraphicTesting/ExternalDependencies/lib/Re/x86/: glew32s.lib
GraphicTesting/src/: CMakeLists.txt
GraphicTesting/src/Graphics/: CMakeLists.txt  main.cpp
